codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问题 1/1（1 未回答）                                                                                                  
  请补充细节。                                                                                                          
                                                                                                                        
  › 输入你的回答（可选）                                                                                                
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter 提交答案 | 按 esc 中断
