codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_multi_question_last.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
assertion_line: 2770
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问题 2/2（2 未回答）                                                                                                  
  请补充细节。                                                                                                          
                                                                                                                        
  › 输入你的回答（可选）                                                                                                
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter 提交全部 | ctrl + p / ctrl + n 切换问题 | 按 esc 中断
