codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_scrolling_options.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问题 1/1（1 未回答）                                                                                                  
  你接下来想做什么？                                                                                                     
                                                                                                                        
    1. 讨论代码改动（推荐）  先梳理计划，再一起修改代码。                                                                 
    2. 运行测试  选择一个 crate 并运行其测试。                                                                           
    3. 审查差异  总结或审查当前更改。                                                                                    
  › 4. 重构  优化结构并移除死代码。                                                                                      
    5. 发布  定稿并提交 PR。                                                                                             
                                                                                                                        
  tab 添加备注 | enter 提交答案 | 按 esc 中断
