codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_tight_height.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问题 1/1（1 未回答）                                                                                                  
  选择一个选项。                                                                                                        
                                                                                                                        
  › 1. 选项 1  第一个选项。                                                                                              
    2. 选项 2  第二个选项。                                                                                              
    3. 选项 3  第三个选项。                                                                                              
                                                                                                                        
  tab 添加备注 | enter 提交答案 | 按 esc 中断
