codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_unanswered_confirmation.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  还有未回答问题，仍要提交吗？                                                        
  2 个未回答问题                                                                  
                                                                                
  › 1. 继续提交  仍有 2 个未回答问题。                                              
    2. 返回  返回第一个未回答的问题。                                               
                                                                                
                                                                                
                                                                                
                                                                                
  按 enter 确认或按 esc 返回
