codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_wrapped_options.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                              
  问题 1/1（1 未回答）                                                                                       
  为此任务选择下一步。                                                                                              
                                                                                                              
  › 1. 讨论代码改动  先梳理计划，再一起实现，并进行仔细检查。                                                        
    2. 运行针对性测试  选择最相关的 crate，先验证当前行为。                                                        
    3. 审查差异  总结更改并强调最重要的风险与空缺。                                                                 
                                                                                                              
  tab 添加备注 | enter 提交答案 | 按 esc 中断
